--- a/src/components/Spinner/style.css
+++ b/src/components/Spinner/style.css
@@ -1,44 +1,55 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    font-family:Helvetica, Arial, sans-serif;
-    font-weight: 100;
-    overflow: hidden;
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
   }
-  
-  #app {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  /* .links{
-    position:fixed;
-    bottom:10px;
-    left:10px;
-    font-size:20px;
-  }
-  
-  .links .fa{
-    margin-right:5px;
-    vertical-align:middle;
-  }
-  
-  .links .linkText{
-    position:relative;
-    top:1px;
-    vertical-align:middle;
-  }
-  
-  .links a{
-    display:block;
-    text-decoration:none;
-    color: #5B96FF;
-    transition: 0.3s all;
-  }
-  
-  .links a:hover{
-    color:#447BA1;
-  } */
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body {
+  background-color: #eee;
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.spinner__circle {
+  position: relative;
+  width: 54px;
+  height: 54px;
+  overflow: hidden;
+  background-color: #5FCAF2;
+  border-radius: 100%;
+  animation: spin 1s infinite linear;
+}
+.spinner__circle-inner, .spinner__circle-gradient {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  transform: translate(-50%, -50%);
+}
+.spinner__circle-inner {
+  top: 50%;
+  left: 50%;
+  background-color: #eee;
+  border-radius: 100%;
+}
+.spinner__circle-gradient {
+  top: -24px;
+  left: 6px;
+  background-color: #5FCAF2;
+  background-image: -moz-linear-gradient(0deg, #5FCAF2 0%, #eee 50%);
+  background-image: -webkit-linear-gradient(0deg, #5FCAF2 0%, #eee 50%);
+  background-image: linear-gradient(0deg, #5FCAF2 0%, #eee 50%);
+  transform: rotate(-45deg);
+}
