--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -1,86 +1,21 @@
-/* .table-style {
-  padding: 1rem;
-}
-.table-style table {
-  border-spacing: 0;
-  border: 1px solid black;
-}
-.table-style table tr :last-child td {
-  border-bottom: 0;
-}
-.table-style table th, .table-style table td {
-  margin: 0;
-  padding: 0.5rem;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
-}
-.table-style table th :last-child, .table-style table td :last-child {
-  border-right: 0;
-}
-.table-style .pagination {
-  padding: 0.5rem;
-} */
-
 table {
-  border-spacing: 0;
-  border: 1px solid #ededed;
-}
-table tr:last-child td {
-  border-bottom: 0;
-}
-table th,
-table td {
-  margin: 0;
-  padding: 0.5rem;
-  border-bottom: 1px solid #ededed;
-  border-right: 1px solid #ededed;
-  position: relative;
-}
-table th:last-child,
-table td:last-child {
-  border-right: 0;
-}
-table tr:nth-child(even) {
-  background-color: #fafafa;
-}
-
-table th::before {
-  position: absolute;
-  right: 15px;
-  top: 16px;
-  content: "";
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-}
-table th.sort-asc::before {
-  border-bottom: 5px solid #22543d;
-}
-table th.sort-desc::before {
-  border-top: 5px solid #22543d;
-}
-
-.App {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-}
-.badge {
-  background-color: #9ae6b4;
-  color: #22543d;
-  margin-right: 4px;
-  padding: 4px 8px;
-  border-radius: 12px;
-  font-size: 12px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-input {
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 18px;
-  border-radius: 5px;
+  border-collapse: collapse;
+  width: auto; 
   border: 1px solid #ddd;
-  box-shadow: none;
+  font-size: 18px;
+  margin: 2rem auto;
+}
+
+
+table th, table td {
+  text-align: left;
+  padding: 12px; 
+}
+
+table tr {
+  border-bottom: 1px solid #ddd;
+}
+
+table tr.header, table tr:hover {
+  background-color: #f1f1f1;
 }
