--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,4 +1,4 @@
-.dashboard-container{
+/* .dashboard-container{
     display: flex;
     flex-direction: column;
 }
@@ -6,4 +6,8 @@
     background-color: #f5eaea;
     height: calc(100vh - 12vh);
     padding: 2rem 1rem;
-}
+} */
+
+
+  
+  
