--- a/src/components/Alert/style.css
+++ b/src/components/Alert/style.css
@@ -1,27 +1,37 @@
+.alert-container { display: block }
+.alert-container-hide { display: none }
+
 .alert {
-    padding: 20px;
-    background-color: #8b8888;
-    color: white;
-    opacity: 1;
-    transition: opacity 0.6s;
-    margin-bottom: 15px;
-  }
-  .alert.error {background-color: #f44336;}
-  .alert.success {background-color: #4CAF50;}
-  .alert.info {background-color: #2196F3;}
-  .alert.warning {background-color: #ff9800;}
+  display: grid;
+  grid-template-columns: 2rem 1fr 1rem;
+  grid-column-gap: 1rem;
+  padding: .5rem .75rem;
+  background-color: #8b8888;
+  color: #fefefe;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+.alert p { margin: 0 }
+.alert .icon-type{ font-size: 2rem;}
+.closebtn {
+  margin-right: 1rem;
+  color: #fefefe;
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 20px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+/* Alert Type */
+.alert.alert-success { background-color: var(--success-color) }
+.alert.alert-error { background-color: var(--error-color) }
+.alert.alert-warning { background-color: var(--warning-color) }
+.alert.alert-info { background-color: var(--info-color) }
   
-  .closebtn {
-    margin-left: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  
-  .closebtn:hover {
-    color: black;
-  }
+.closebtn svg { color: #fefefe }
+.closebtn:hover > svg { color: #333 }
+
+
+
