--- a/src/components/Avatar/style.css
+++ b/src/components/Avatar/style.css
@@ -1,87 +1,47 @@
 .avatar {
-  background-color: gray;
-  border-radius: 50%;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
-.badge {
-  position: relative;
-}
-.badge::after {
-  background: white;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  content: "";
-  display: block;
-  position: absolute;
-}
-
-.small {
-  height: 2.5rem;
-  width: 2.5rem;
-}
-
-.medium {
-  height: 3.75rem;
-  width: 3.75rem;
-}
-
-.large {
-  height: 5rem;
-  width: 5rem;
-}
-
-.small::after {
-  background-size: 0.9375rem 0.9375rem;
-  height: 0.9375rem;
-  width: 0.9375rem;
-  right: -0.1rem;
-  bottom: -0.1rem;
-}
-
-.medium::after {
-  background-size: 1.15rem 1.15rem;
-  height: 1.15rem;
-  width: 1.15rem;
-  right: -0.1rem;
-  bottom: -0.1rem;
-}
-
-.large::after {
-  background-size: 1.5rem 1.5rem;
-  height: 1.5rem;
-  width: 1.5rem;
-  right: -0.1rem;
-  bottom: -0.1rem;
-}
-
-.bronze::after {
-  background: sienna;
-}
-
-.silver::after {
-  background: silver;
-}
-
-.gold::after {
-  background: gold;
-}
-
-.platinum::after {
-  background: ghostwhite;
-}
-
-body {
-  background-color: white;
-}
-
-.container {
-  align-items: center;
   display: flex;
-  flex: 1 0 100%;
-  flex-flow: row nowrap;
-  height: 15rem;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid lightgray;
+  position: relative;
+  margin: .2rem
 }
+
+/* size: xs - sm - md - lg - xl */
+.avatar-xs { width: 2.5rem; height: 2.5rem }
+.avatar-sm { width: 4rem; height: 4rem; }
+.avatar-md { width: 5rem; height: 5rem; }
+.avatar-lg { width: 7.5rem; height: 7.5rem }
+.avatar-xl { width: 9.5rem; height: 9.5rem }
+
+/* shape: square - circle */
+.avatar-square { border-radius: .5rem; background-color: #e0e0e0; }
+.avatar-circle { border-radius: 50%; background-color: #e0e0e0; }
+
+.avatar__initials { font-weight: 300; text-align: center }
+.avatar-xs .avatar__initials, .avatar-xs svg { font-size: 1rem; }
+.avatar-sm .avatar__initials, .avatar-sm svg { font-size: 2rem; letter-spacing: 1px; }
+.avatar-md .avatar__initials, .avatar-md svg { font-size: 3rem; letter-spacing: 3px; }
+.avatar-lg .avatar__initials, .avatar-lg svg { font-size: 4rem; letter-spacing: 5px; }
+.avatar-xl .avatar__initials, .avatar-xl svg { font-size: 5rem; letter-spacing: 7px; }
+
+/* Icon */
+.avatar .icon-user{ color: #333 }
+
+/* Badge */
+.avatar .badge {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+}
+.avatar-xs .badge{ top: 0; right: -15%; }
+.avatar-sm .badge{ top: 0; right: 5%; }
+.avatar-md .badge{ top: 0; right: 7%; }
+.avatar-lg .badge{ top: 0; right: 14%; }
+.avatar-xl .badge{ top: 0; right: 21%; }
+
+.avatar .badge.offline{ background-color: gray; }
+.avatar .badge.online{ background-color: var(--success-color); }
+.avatar .badge.absent{ background-color: var(--error-color); }
+.avatar .badge.busy{ background-color: var(--warning-color); }
