--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -38,8 +38,8 @@
 }
 
 .Nav{
-  background: #15171c;
-  height: 12vh;
+  background: gray;
+  height: 10vh;
   display: flex;
   justify-content: flex-start;
   align-items: center
@@ -53,13 +53,13 @@
   align-items: center
 }
 .SidebarNav{
-  background: #15171c;
+  background:gray;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   justify-content: center;
   position: fixed;
-  top: 0;
+  top: 10vh;
   left: -100%;
   transition: 350ms;
   z-index: 10;
