--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -1,4 +1,4 @@
-table {
+/* table {
   border-collapse: collapse;
   width: auto; 
   border: 1px solid #ddd;
@@ -18,4 +18,4 @@ table tr {
 
 table tr.header, table tr:hover {
   background-color: #f1f1f1;
-}
+} */
