--- a/src/components/Avatar/style.css
+++ b/src/components/Avatar/style.css
@@ -1,3 +1,8 @@
+:root{
+  --clr-gray100: #f9fbff;
+  --clr-gray600: #2a324b;
+}
+
 .avatar {
   display: flex;
   justify-content: center;
@@ -34,6 +39,8 @@
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
+  z-index: 100;
+  border: 2px solid #fefefe;
 }
 .avatar-xs .badge{ top: 0; right: -15%; }
 .avatar-sm .badge{ top: 0; right: 5%; }
@@ -45,3 +52,45 @@
 .avatar .badge.online{ background-color: var(--success-color); }
 .avatar .badge.absent{ background-color: var(--error-color); }
 .avatar .badge.busy{ background-color: var(--warning-color); }
+
+/* Multiple */
+.avatar-group-container { display: flex }
+
+.profiles { display: flex }
+.profiles__group { 
+  position: relative;
+  margin-left: -1.2rem;
+  cursor: pointer;
+}
+.profiles img {
+  width: 6rem;
+  height: 6rem;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 50%;
+  border: 4px solid var(--clr-gray100);
+  position: relative;
+  top: 0;
+  transition: 250ms top ease-in-out;
+}
+
+.profiles p {
+  position: absolute;
+  background-color: var(--clr-gray600);
+  color: white;
+  border-radius: $radius;
+  padding: 0.2rem 0.5rem;
+  top: 6rem;
+  text-align: center;
+  /* center aligns text under image */
+  left: 50%;
+  transform: translatex(-50%);
+  display: none;
+}
+
+.profiles__group:first-child { margin-left: 0 }
+.profiles__group img:hover {
+  top: -1rem;
+  z-index: 99;
+}
+.profiles__group p:hover { display: block }
