--- a/src/components/DropDownMenu/style.css
+++ b/src/components/DropDownMenu/style.css
@@ -5,8 +5,9 @@
   }
   .dropdown-menu .toggle {
     cursor: pointer;
-    padding: .5rem .5rem 1.5rem .75rem;
-    margin: 2px 2px 0 0;
+    padding: .5rem;
+    margin: .2rem;
+    display: flex;
     transition: background 0.25s;
   }
   
