--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -8,7 +8,7 @@
   padding-left: 50px;
 }
 .navbar {
-  background: #333;
+  background-color: var(--bg-nav);
   height: 70px;
   display: flex;
   justify-content: center;
@@ -18,17 +18,16 @@
   top: 0;
   z-index: 999;
 }
-.active{
-  background-color: #0b30b6;
-}
+/* .active{ background-color: lightgray } */
 
 .navbar-container {
   display: flex;
   justify-content: space-between;
   height: 80px;
+  box-shadow: 0px 0px 10px #e1e5ee;
 }
 .navbar-logo {
-  color: #fff;
+  color: var(--text-color)!important;
   justify-self: start;
   cursor: pointer;
   text-decoration: none;
@@ -37,9 +36,7 @@
   align-items: center;
 }
 
-.navbar-icon {
-  margin-right: 0.5rem;
-}
+.navbar-icon { margin-right: 0.5rem }
 
 .nav-menu {
   display: flex;
@@ -63,24 +60,31 @@
   margin: 0;
   padding:0;
 }
-.nav-menu-auth .nav-btn:nth-child(1){
-  margin-right: .5rem;
-}
-.nav-menu-auth .nav-btn:nth-child(2){
-  margin-left: .5rem;
-}
+/* .nav-btn { color: #fefefe } */
+.nav-menu-auth .nav-btn:nth-child(1) { margin-right: .5rem }
+.nav-menu-auth .nav-btn:nth-child(2) { margin-left: .5rem }
+
 /* switch */
-.nav-switch button{
-  margin: 0 .2rem;
-}
-
-.nav-item {
-  height: 80px;
+.nav-switch button{ margin: 0 .2rem }
+.nav-item { 
+  color: var(--text-color);
+  height: 70px;
   border-bottom: 2px solid transparent;
+  background-color: var(--bg-nav);
 }
-
+/* Switcher */
+.nav-menu-mode {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  text-align: center;
+  justify-content: end;
+  margin: 0;
+  padding:0;
+}
 .nav-links {
-  color: #fff;
+  color: var(--text-color)!important;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -88,13 +92,10 @@
   height: 100%;
 }
 
-.fa-bars {
-  color: #fff;
-}
+.fa-bars { color: #fff }
 
-.menu-icon {
-  display: none;
-}
+.menu-icon { display: none }
+
 
 @media screen and (max-width: 960px) {
   .NavbarItems {
@@ -125,26 +126,44 @@
     transition: all 0.5s ease;
   }
   .nav-menu-auth.active {
-    background: #1c2237;
+    background: var(--bg-nav);
     left: 0;
     opacity: 1;
     transition: all 0.6s ease;
     z-index: 1;
     top: 29rem;
   }
-  .nav-menu-auth .nav-btn:nth-child(1){
-    margin-right: 0;
-  }
-  .nav-menu-auth .nav-btn:nth-child(2){
-    margin-left: 0;
-  }
+  .nav-menu-auth .nav-btn:nth-child(1) { margin-right: 0 }
+  .nav-menu-auth .nav-btn:nth-child(2) { margin-left: 0 }
 
   .nav-menu.active {
-    background: #1c2237;
+    background: var(--bg-nav);
     left: 0;
     opacity: 1;
     transition: all 0.6s ease;
     z-index: 1;
+    border-top: 1px solid lightgray;
+  }
+
+  /* Menu switcher */
+  .nav-menu-mode {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 70px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+  .nav-menu-mode.active {
+    background: var(--bg-nav);
+    left: 0;
+    opacity: 1;
+    transition: all 0.6s ease;
+    z-index: 1;
+    top: 26rem;
   }
 
   .nav-links {
@@ -155,18 +174,14 @@
   }
 
   .nav-links:hover {
-    color: #f00946;
+    color: #767b91;
     transform: scale(1.2);
     transition: all 0.3s ease;
   }
 
-  .nav-item:hover {
-    border: none;
-  }
+  .nav-item:hover { border: none; background-color: var(--link-bg-hover) }
 
-  .nav-item {
-    width: 100%;
-  }
+  .nav-item { width: 100% }
 
   .navbar-logo {
     position: absolute;
@@ -184,6 +199,7 @@
     font-size: 1.8rem;
     cursor: pointer;
   }
+  .menu-icon svg { color: var(--icon-color)!important }
 
   .fa-times {
     color: #fff;
@@ -197,4 +213,66 @@
     width: 100%;
     height: 5rem;
   }
+}
+
+/* Dark Mode Switcher */
+.nav-menu-mode input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+.nav-menu-mode label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 52px;
+  height: 27px;
+  background: var(--bg-nav);
+  float: right;
+  border-radius: 100px;
+  position: relative;
+}
+.nav-menu-mode label:after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+.nav-menu-mode input:checked + label {
+  background: var(--color-headings);
+}
+.nav-menu-mode input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+.nav-menu-mode label:active:after {
+  width: 45px;
+}
+html.transition, html.transition *, html.transition *:before, html.transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
+}
+.toggle-container svg {
+  color: var(--icon-color);
+  font-size: 2rem; padding: .2rem .5rem .5rem .5rem;
+}
+.toggle-container {
+  position: relative;
+}
+.toggle-container label{
+  position: absolute;
+  right: 5%
+}
+.toggle-container .icon-moon, .toggle-container .icon-sun{
+  position: absolute; color: var(--icon-color);
+}
+.toggle-container .icon-moon{
+  right: 1%; 
+}
+.toggle-container .icon-sun{
+  right: 11%; 
 }
