--- a/src/components/Notification/style.css
+++ b/src/components/Notification/style.css
@@ -91,13 +91,13 @@
 }
 
 .toast {
-    height: 50px;
-    width: 365px;
-	color: #fff;
+    height: 3rem;
+    width: 20rem;
+	color: #fefefe;
 	padding: 20px 15px 10px 10px;
 }
 
-.notification-container button {
+.notification-container .close-icon {
 	position: relative;
 	right: -.3em;
 	top: -.3em;
@@ -190,18 +190,10 @@
 	font-size: 16px;
   }
   
-  .success {
-	background-color: #5cb85c;
-  }
-  .danger {
-	background-color: #d9534f;
-  }
-  .info {
-	background-color: #5bc0de;
-  }
-  .warning {
-	background-color: #f0ad4e;
-  }
+  .success { background-color: var(--success-color) }
+  .danger { background-color: var(--error-color) }
+  .info { background-color: var(--info-color) }
+  .warning { background-color: var(--warning-color) }
   
   
   
